--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
-  </head>
-  <body class="main-body">
-    <div class="container"></div>
-  </body>
-  <script src="/bundle.js"></script>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
+
+    * {
+      font-family: 'Roboto Slab', sans-serif;
+    }
+
+    form a {
+      margin-left: 5px;
+    }
+
+    html,
+    .list-group {
+      background-size: cover;
+      background: url('../assets/chalk-background.jpg') !important;
+    }
+
+    body.main-body {
+      padding-top: 120px;
+      background-color: transparent;
+    }
+
+    h3.heading {
+      text-transform: uppercase;
+      color: #fff;
+    }
+
+    p {
+      color: #fff;
+    }
+
+    body .list-group-item {
+      background-color: transparent;
+    }
+
+    li a,
+    li span {
+      color: #fff;
+      text-decoration: underline;
+      transition: all 0.3s linear;
+    }
+
+    li:hover span {
+      font-size: 22px;
+    }
+
+    .error {
+      color: red;
+    }
+
+    .home {
+      margin-bottom: 30px;
+    }
+  </style>
+</head>
+
+<body class="main-body">
+  <div class="container"></div>
+</body>
+<script src="/bundle.js"></script>
+
 </html>
