--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     html,
     .list-group {
       background-size: cover;
-      background: url('../assets/chalk-background.jpg') !important;
+      background: url('./assets/chalk-background.jpg') !important;
     }
 
     body.main-body {
