--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     html,
     .list-group {
       background-size: cover;
-      background: url('./assets/chalk-background.jpg') !important;
+      background: url('https://pre00.deviantart.net/51d8/th/pre/f/2014/026/e/5/grey_checker_pattern_background_by_ab_cs_center-d73sctt.jpg') !important;
     }
 
     body.main-body {
